--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
     "@types/jest": "^29.5.13",
     "@types/morgan": "^1.9.9",
     "@types/supertest": "^6.0.2",
