--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "morgan": "^1.10.0",
     "ts-node": "^10.9.2",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.24.7",
+    "@types/cors": "^2.8.17",
     "@types/jest": "^29.5.13",
     "@types/morgan": "^1.9.9",
     "@types/supertest": "^6.0.2",
